Atualizacao de arquivos de configuracao, criacao de classes de modelo do sistema

--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 	<name>${project.carminp.name}</name>
 	<inceptionYear>2014</inceptionYear>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>EAR</groupId>
-	<version>1.0</version>   
+	<groupId>com.achieve</groupId>
+	<version>1.0</version>
 	<artifactId>${project.carminp.name}</artifactId>
 	<packaging>war</packaging>
 
@@ -29,11 +29,13 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- FIM JUNIT IMPORTS -->
+		<!-- POSTGRESQL IMPORTS -->
 		<dependency>
-			<groupId>postgresql</groupId>
+			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>9.1-901-1.jdbc4</version>
+			<version>9.3-1100-jdbc41</version>
 		</dependency>
+		<!-- FIM POSTGRESQL IMPORTS -->
 		<!-- JAVA EE API -->
 		<dependency>
 			<groupId>javax</groupId>
