--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,8 @@
 						<source>1.8</source>
 						<target>1.8</target>
 						<encoding>${project.build.sourceEncoding}</encoding>
+						<showWarnings>true</showWarnings>
+						<showDeprecation>true</showDeprecation>
 					</configuration>
 				</plugin>
 				<plugin>
