--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,20 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- FIM JUNIT IMPORTS -->
+		<!-- ARQUILLIAN IMPORTS -->
+        <dependency>
+            <groupId>org.jboss.arquillian.junit</groupId>
+            <artifactId>arquillian-junit-container</artifactId>
+            <scope>test</scope>
+            <version>1.1.5.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.arquillian.protocol</groupId>
+            <artifactId>arquillian-protocol-servlet</artifactId>
+            <scope>test</scope>
+            <version>1.1.5.Final</version>
+        </dependency>
+        <!-- FIM ARQUILLIAN IMPORTS -->
 		<!-- POSTGRESQL IMPORTS -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
