--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
 		<project.carminp.name>Carminp</project.carminp.name>
 		<project.version.java>1.8</project.version.java>
 		<project.version.hibernate>4.3.6.Final</project.version.hibernate>
+		<project.version.jackson>2.4.3</project.version.jackson>
+		<project.version.slf4j>1.7.7</project.version.slf4j>
 	</properties>
 
 	<dependencies>
@@ -31,20 +33,18 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- FIM JUNIT IMPORTS -->
-		<!-- ARQUILLIAN IMPORTS -->
-        <dependency>
-            <groupId>org.jboss.arquillian.junit</groupId>
-            <artifactId>arquillian-junit-container</artifactId>
-            <scope>test</scope>
-            <version>1.1.5.Final</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.arquillian.protocol</groupId>
-            <artifactId>arquillian-protocol-servlet</artifactId>
-            <scope>test</scope>
-            <version>1.1.5.Final</version>
-        </dependency>
-        <!-- FIM ARQUILLIAN IMPORTS -->
+		<!-- JACKSON IMPORTS -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>${project.version.jackson}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>${project.version.jackson}</version>
+		</dependency>
+		<!-- FIM JACKSON IMPORTS -->
 		<!-- POSTGRESQL IMPORTS -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -64,12 +64,12 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.7</version>
+			<version>${project.version.slf4j}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.7</version>
+			<version>${project.version.slf4j}</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
@@ -77,13 +77,6 @@
 			<version>1.2.17</version>
 		</dependency>
 		<!-- FIM LOG API's IMPORTS -->
-		<!-- EASY CRITERIA API's IMPORTS -->
-		<dependency>
-			<groupId>uaihebert.com</groupId>
-			<artifactId>EasyCriteria</artifactId>
-			<version>3.0.0</version>
-		</dependency>
-		<!-- FIM EASY CRITERIA API's IMPORTS -->
 		<!-- HIBERNATE API's IMPORTS -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -141,11 +134,6 @@
 							</goals>
 						</execution>
 					</executions>
-				</plugin>
-				<plugin>
-					<groupId>org.wildfly.plugins</groupId>
-					<artifactId>wildfly-maven-plugin</artifactId>
-					<version>1.0.2.Final</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
