--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
 			<artifactId>jackson-annotations</artifactId>
 			<version>${project.version.jackson}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-hibernate4</artifactId>
+			<version>2.4.0</version>
+		</dependency>
 		<!-- FIM JACKSON IMPORTS -->
 		<!-- POSTGRESQL IMPORTS -->
 		<dependency>
@@ -77,6 +82,11 @@
 			<version>1.2.17</version>
 		</dependency>
 		<!-- FIM LOG API's IMPORTS -->
+		<dependency>
+			<groupId>uaihebert.com</groupId>
+			<artifactId>EasyCriteria</artifactId>
+			<version>3.0.0</version>
+		</dependency>
 		<!-- HIBERNATE API's IMPORTS -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
