Resolucao de bug #1 e melhora #2

--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,8 @@
 					<version>2.4</version>
 					<configuration>
 						<failOnMissingWebXml>false</failOnMissingWebXml>
+						<warName>${project.carminp.name}</warName>
+						<useCache>true</useCache>
 						<archive>
 							<manifest>
 								<addClasspath>true</addClasspath>
